2008-08-27  Kurt Biery <biery@fnal.gov>

	* tag V03-14-08
	* Added variable reinitialization to the ServiceManager::stop() method.
	  With this change and a fix to clear the contents of the InitMsgCollection
	  in StorageManager::enabling(), hopefully the SM will correctly handle
	  Stop/Enable transitions (with regard to output file handling).

2008-08-22  Kurt Biery <biery@fnal.gov>

	* tag V03-14-07
	* Fixed bug in looping over output files.

2008-08-22  Constantin Loizides <loizides@mit.edu>

	* tag V03-14-06
	* Rolled back the algorithm for closing files - it only depends on
	  a time interval with this change - there is no dependence on lumi
	  section number.

2008-08-18  Kurt Biery <biery@fnal.gov>

	* tag V03-14-03
	* Flashlist fixes: Uncommented fireItemAvailable of storedEvents in
	  StorageManager.cc for Constantin/Emilio. Updated forgotten conversion
	  of connectedFUs to connectedRBs in test/sm.flash.

2008-08-17  Harry Cheung <cheung@fnal.gov>

	* tag V03-14-02
	* Fix for handling large INIT message (multiple I2O frames).

2008-08-14  Constantin Loizides <loizides@mit.edu>

	* tag V03-14-01
	* Script changes.
	* Fix to lumi file closing and minor change to Error stream handling.

2008-08-13  Kurt Biery <biery@fnal.gov>

	* tag V03-14-00
	* Added the Error stream.  This included converting the StreamService and
	  OutputService classes into interfaces and creating derived classes for
	  handling regular events and FRDEvents (FED Raw Data Events) [which is a
	  more generic name for Error events].  This change depends on
	  IOPool/Streamer V05-02-00.

2008-08-13  William Tanenbaum <wmtan@fnal.gov>

	* tag V03-13-00
	* Bug fix for a repacker problem. Due to the data dictionaries being loaded
	  too late, the repacker writes the raw data fully split, rather than unsplit,
	  as was specified in the dictionary.  This is not a critcal problem in that
	  the number of extra branches due to the splitting is small.  Nonetheless,